fixed logout location and aligned labels in css

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -21,7 +21,8 @@ h1 {
 
 
 nav {
-    float: right;
+    /* float: right; */
+    text-align: right;
     color: black;
     background-color: rgba(0, 128, 128, 0.027);
     padding-bottom: 15px;
@@ -55,7 +56,7 @@ footer {
 
 main p {
     padding-left: 460px;
-    padding-top: 100px;
+    padding-top: 70px;
 }
 
 .new-item {
@@ -114,3 +115,33 @@ main p {
 ul {
     list-style-type: none;
 }
+
+label {
+    width: 65px;
+    display: inline-block;
+}
+
+
+
+
+
+
+
+@media (max-width: 12450px) {  }
+
+@media (max-width: 900px) {  }
+
+@media (max-width: 600px) {  }
+
+@media (max-width: 450px) {  }
+
+
+/* 
+@media screen and (max-width: 600px) {
+        #post p {
+            /* width: 100%; */
+            /* flex: 1 100%; */
+            /* text-align: center; */
+            
+        /* } */
+/* } */ 
